-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10
-
Component/s: client-libs
-
Environment:
Windows 10 with Japanese language pack installed.
JDK 9 or JDK 10.
-
b13
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8343573 | openjdk8u442 | Kazuhisa Takakuri | P3 | Resolved | Fixed | b03 |
| JDK-8360976 | shenandoah8u442 | Kazuhisa Takakuri | P3 | Resolved | Fixed | b03 |
To reproduce this bug, use the Japanese IME on Windows 10 with the display set to 125% or 150% and run any Swing program that has a JTextField or JTextArea (e.g., the attached program). When you enter text using the IME popup, the popup will be positioned above and to the left of where it should be, obscuring the text field.
- backported by
-
JDK-8343573 Swing: Invalid position of candidate pop-up of InputMethod in Hi-DPI on Windows
-
- Resolved
-
-
JDK-8360976 Swing: Invalid position of candidate pop-up of InputMethod in Hi-DPI on Windows
-
- Resolved
-
- duplicates
-
JDK-8202084 [win] IME candidate window wrong position
-
- Closed
-
-
JDK-8202084 [win] IME candidate window wrong position
-
- Closed
-
- relates to
-
JDK-8202084 [win] IME candidate window wrong position
-
- Closed
-
-
JDK-8189282 JavaFX: Invalid position of candidate pop-up of InputMethod in Hi-DPI on Windows
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk8u-dev/1d2f4670
-
Review(master)
openjdk/jdk8u-dev/564