8189687: Swing: Invalid position of candidate pop-up of InputMethod in Hi-DPI on Windows

Reviewed-by: serb, psadhukhan